# sous-chef

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: App.css  App.tsx  RecipeList.tsx  RecipeView.module.css  RecipeView.tsx  events.ts  index.html  index.ts  index.tsx
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.toml
src-tauri/src/: commands.rs  lib.rs  menu.rs  state.rs
src-tauri/src/commands/: get_recipe.rs  list_recipes.rs  mod.rs  read_recipe_data.rs
src/typings/: menu.d.ts  modules.d.ts  recipe.d.ts
