[package]
name = "sous-chef"
version = "0.1.0"
description = "A recipe manager app"
authors = ["Mike Niebling"]
license = "UNLICENSED"
repository = "https://github.com/mniebling/sous-chef"
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
gray_matter = "0.2.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
tauri-plugin-fs = "2.2.0"
tauri-plugin-log = "2.2.0"

[dependencies.tauri]
features = [
	"config-toml",
]
version = "2.2.1"
